[package]
name = "travel-helper"
authors = ["Rohit Dandamudi <rohitdandamudi.1100@gmail.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0.207",  features = ["derive"] }
serde_json = "1.0.124"
spin-sdk = "3.0.1"
random-string = "1.0"

[workspace]
